--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,12 @@ jobs:
       - run: npm ci
       - name: Build
         run: npm run docs:build
+      - name: Move built files to /docs
+        run: mv docs/.vitepress/dist/* docs/
       - uses: actions/configure-pages@v2
       - uses: actions/upload-pages-artifact@v1
         with:
-          path: docs/.vitepress/dist
+          path: docs
       - name: Deploy
         id: deployment
         uses: actions/deploy-pages@v1
