更新任务流

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,15 @@ jobs:
       - run: npm ci
       - name: Build
         run: npm run docs:build
+      - name: Move built files to /docs and clean up
+        run: |
+          rm -rf docs/guide docs/reference
+          mv docs/.vitepress/dist/* docs/
+          rm -rf docs/.vitepress/dist
       - uses: actions/configure-pages@v2
       - uses: actions/upload-pages-artifact@v1
         with:
-          path: docs/.vitepress/dist
+          path: docs
       - name: Deploy
         id: deployment
         uses: actions/deploy-pages@v1
